file-rc (0.8.12) unstable; urgency=low

  * New maintainer (Closes: #539609)
  * Add better debugging support
  * Bump standards version (no further changes)
  * Remove linda overrides
  * Only create symlinks im post-rm if programs are missing (Closes: #543780)
    Thanks Petter Reinholdtsen for the patch

 -- Alexander Wirt <formorer@debian.org>  Sun, 07 Mar 2010 12:29:04 +0100

file-rc (0.8.11) unstable; urgency=low

  * Fix bash-completion when invoked via sudo. Thanks to Javier Kohen
    <jkohen@users.sourceforge.net> for providing a patch (Closes: #310456).
  * Replace "kill -0" by "kill -s 0", because the other seems to be a
    bashism. Thanks to Mert Dirik <mertdirik@gmail.com> for providing a
    patch (Closes: #464650).
  * Upgrade to Standards-Version 3.7.3 (no changes).
  * Convert copyright from iso-8859-1 to utf-8.
  * Remove some outdated warnings from overrride.lintian.

 -- Roland Rosenfeld <roland@debian.org>  Thu, 01 May 2008 12:25:29 +0200

file-rc (0.8.10) unstable; urgency=high

  * The quick idiot release :-(
  * Fix the IFS bug now in /etc/init.d/rcS, too.

 -- Roland Rosenfeld <roland@debian.org>  Mon,  3 Jul 2006 18:01:46 +0200

file-rc (0.8.9) unstable; urgency=high

  * Fix the IFS bug introduced with the previous version, which implied
    that /etc/init.d/rc did nothing any more (Closes: #376366).

 -- Roland Rosenfeld <roland@debian.org>  Mon,  3 Jul 2006 17:50:05 +0200

file-rc (0.8.8) unstable; urgency=low

  * Fix POSIX sh incompatibilities. Thanks to Jörg Sommer for reporting
    this and providing a patch (Closes: #292632).
  * Build-Depends instead of Build-Depends-Indep on debhelper.
  * Upgrade to debhelper v5.
  * Upgrade to Standards-Version 3.7.2 (no changes).
  * Fix non ascii char in runlevel.conf.5 man page.
  * Remove non-posix-code from postinst.
  * Remove closes=n entries from old changelog header lines to make
    lintian happy.
  * Update FSF address in debian/copyright.
